syntax = "proto3";

package api.nft.v1;

import "api/base/v1/base.proto";
import "api/nft/v1/typs.proto";


option go_package = "4clabs-server/api/nft/v1;v1";
option java_multiple_files = true;
option java_package = "api.nft.v1";

message ListComicWorkRequest {
    api.base.v1.BaseListRequest base_list_request = 1;
    string address = 2;
}
message ListComicWorkResponse {
    api.base.v1.BaseListResponse base_list_response = 1;
    repeated api.nft.v1.ComicWork comic_works = 2;
}