syntax = "proto3";

package api.nft.v1;

import "api/base/v1/base.proto";
import "api/nft/v1/typs.proto";

option go_package = "4clabs-server/api/nft/v1;v1";


message GetNftDetailRequest {
    string contract_address = 1;
    string token_id = 2;
}
message GetNftDetailResponse {
    api.nft.v1.Detail detail = 1;
}



message GetAddressNftsRequest {
    api.base.v1.BaseListRequest base_list_request = 1;
    string address = 2;
}
message GetAddressNftResponse {
    api.base.v1.BaseListResponse base_list_response = 1;
    repeated api.nft.v1.Summary summaries = 2;
}